--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <script defer src="js/app.js"></script>
-  <title>PUPPED</title>
+  <script defer src="assets/js/app.js"></script>
+  <title>Encomendas</title>
 </head>
 <body>
   <header>
@@ -20,11 +21,11 @@
       <label for="nome">Nome completo</label>
       <input type="text" name="nome" id="nome" required>
       <label for="contato">Contato</label>
-      <input type="text" name="contato" id="contato" required>
+      <input type="text" name="contato" id="contato" required placeholder="ex: telefone / instagram / e-mail">
       <label for="modelo" >Modelo</label>
-      <input type="text" name="modelo" id="modelo" required>
+      <input type="text" name="modelo" id="modelo" required placeholder="ex: Dunk / Yeezy 350">
       <label for="detalhes">Detalhes</label>
-      <textarea name="Detalhes" id="detalhes"></textarea>
+      <textarea name="Detalhes" id="detalhes" placeholder="ex: cor / tamanho / collab / condição / etc..."></textarea>
       <label class="imagem" tabindex="0">
         <input type="file" accept="image/*" class="imagem-input">
         <span class="imagem-preview">escolha uma imagem</span>
